# repo

./: .gitignore  CMakeLists.txt  README.md  create_links.sh  file.py  main.c  manage.py
DjangoSite/: asgi.py  settings.py  urls.py  views.py  wsgi.py
module/: __init__.py  hello.pyi
nginx/: DjangoSite.conf
static/errors/: error_403.html  error_404.html  style.css
templates/: index.html
